--- a/public/home/css/ordershow.css
+++ b/public/home/css/ordershow.css
@@ -1,10 +1,9 @@
 /* Code tidied up by ScrapBook */
 .cf::after, q::after, q::before { content: ""; }
 blockquote, body, code, dd, div, dl, dt, fieldset, form, h1, h2, h3, h4, h5, h6, input, legend, li, ol, p, pre, td, textarea, th, ul { margin: 0px; padding: 0px; }
-table { border-collapse: collapse; border-spacing: 0px; }
 fieldset, img { border: 0px none; }
+address, caption, cite, code, dfn, em, var { font-style: normal; font-weight: 400; }
 li { list-style: outside none none; }
-caption, th { text-align: left; }
 h1, h2, h3, h4, h5, h6 { font-size: 100%; }
 input, select, textarea { font-family: inherit; font-size: inherit; font-weight: inherit; }
 html { background-color: rgb(238, 238, 238); }
@@ -12,26 +11,35 @@ body { font: 400 14px/1.5 "Hiragino Sans GB","WenQuanYi Micro Hei",tahoma,sans-s
 a { color: rgb(43, 184, 170); text-decoration: none; }
 a:hover { text-decoration: underline; }
 h1, h2, h3, h4, h5, h6 { font-family: "Hiragino Sans GB"," Microsoft YaHei","WenQuanYi Micro Hei",arial,sans-serif; color: rgb(51, 51, 51); }
-.font-num, .money, .num, .old-price, .price, .sales, .steps-bar .step__num, .time { font-family: arial,sans-serif; }
+.color-text { color: rgb(102, 102, 102); }
 .cf {  }
 .cf::after { display: block; clear: both; height: 0px; overflow: hidden; visibility: hidden; }
-.common-badge { display: inline-block; border-radius: 2em; padding: 1px 3px; background: rgb(247, 97, 32) none repeat scroll 0% 0%; font-size: 11px; line-height: 1em; color: rgb(255, 255, 255); min-width: 1em; transition: opacity 0.5s ease-in-out 0s; opacity: 1; text-align: center; }
-.common-badge--large { padding: 2px 5px; }
+.nav-tabs--small { border-bottom: 1px solid rgb(238, 238, 238); font-size: 12px; line-height: 23px; color: rgb(102, 102, 102); }
+.nav-tabs--small li { float: left; margin-right: -1px; padding: 0px 6px; width: 78px; border-width: 1px 1px 0px; border-style: solid solid none; border-color: rgb(238, 238, 238) rgb(238, 238, 238) currentcolor; -moz-border-top-colors: none; -moz-border-right-colors: none; -moz-border-bottom-colors: none; -moz-border-left-colors: none; border-image: none; background: rgb(249, 249, 249) none repeat scroll 0% 0%; text-align: center; cursor: pointer; }
+.nav-tabs--small .current, .nav-tabs--small li:hover { background: rgb(238, 238, 238) none repeat scroll 0% 0%; }
+.nav-tabs--small li a { display: block; }
 @media not all {
 }
 .icon-new, .tri { position: absolute; }
-.rates, span.money { font-family: arial,sans-serif; }
+.bfc, .ccf, .common-banner, .indication-arrow, .info-section, .section { overflow: hidden; }
 .base-sprite, .icon-new, .site-mast__branding .site-logo { background-image: url(".png"); background-repeat: no-repeat; }
 .tri { height: 0px; width: 0px; line-height: 0; font-size: 0px; border: 3px dashed transparent; }
-#bdw { min-height: auto; }
-#bd { width: 980px; margin: 0px auto; padding: 10px 0px 5px; }
+.clear { clear: both; }
+#bdw { min-height: 500px; }
+#bd { width: 980px; margin: 0px auto; padding: 10px 0px 65px; }
 #content { float: left; width: 720px; padding: 0px; }
 #content .mainbox { background: rgb(255, 255, 255) none repeat scroll 0% 0%; border: 1px solid rgb(238, 238, 238); padding: 25px; clear: both; height: auto !important; min-height: 400px; }
+#content .mainbox h2 { font-size: 28px; border-bottom: 1px solid rgb(221, 221, 221); margin-bottom: 10px; padding-bottom: 10px; }
+#content .mainbox h2 span { font-size: 14px; }
+#content .mainbox h2 span.op-area { position: absolute; top: 40px; right: 20px; font-size: 14px; font-weight: 400; }
 .mine, .mine .bonus { position: relative; }
 .mine { z-index: 1; }
-.has-order-nav #content { width: 820px; }
-.has-order-nav #content .mainbox { padding: 20px; border-color: rgb(238, 238, 238); min-height: 300px; }
-.has-order-nav .component-order-nav { position: relative; float: left; width: 159px; min-height: 340px; border-width: 1px medium 1px 1px; border-style: solid none solid solid; border-color: rgb(238, 238, 238) currentcolor rgb(238, 238, 238) rgb(238, 238, 238); -moz-border-top-colors: none; -moz-border-right-colors: none; -moz-border-bottom-colors: none; -moz-border-left-colors: none; border-image: none; background: rgb(249, 249, 249) none repeat scroll 0% 0%; }
+.info-section, .info-section h3 { font-size: 12px; }
+.info-section { margin: 0px 0px 10px; padding: 8px 16px; border: 1px solid rgb(245, 216, 167); background: rgb(255, 246, 219) none repeat scroll 0% 0%; }
+.info-section dt { margin-bottom: 2px; font-weight: 700; }
+.info-section dd { margin-bottom: 5px; padding-bottom: 8px; border-bottom: 1px dashed rgb(247, 97, 32); }
+.info-section dd.last { margin-bottom: 0px; padding-bottom: 0px; border-bottom: 0px none; }
+.info-section em { font-weight: 700; color: rgb(221, 0, 0); }
 .growth-icons-sprite, .growth-info .level-avatar-0, .growth-info .level-avatar-1, .growth-info .level-avatar-2, .growth-info .level-avatar-3, .growth-info .level-avatar-4, .growth-info .level-avatar-5, .growth-info .level-avatar-6, .growth-info .level-icon-0, .growth-info .level-icon-1, .growth-info .level-icon-2, .growth-info .level-icon-3, .growth-info .level-icon-4, .growth-info .level-icon-5, .growth-info .level-icon-6 { background-image: url("_001.png"); background-repeat: no-repeat; }
 .site-mast__user-nav-w { height: 29px; font-size: 12px; border-top: 1px solid rgb(238, 238, 238); box-shadow: 0px 0px 0px 1px rgb(255, 255, 255), 0px 0px 0px 2px rgb(221, 221, 221), 0px 0px 5px 3px rgb(238, 238, 238); background: rgb(249, 249, 249) none repeat scroll 0% 0%; }
 .site-mast__user-nav { position: relative; margin: 0px auto; width: 980px; z-index: 90; }
@@ -95,11 +103,37 @@ h1, h2, h3, h4, h5, h6 { font-family: "Hiragino Sans GB"," Microsoft YaHei","Wen
 .navbar__item .nav-label { vertical-align: text-bottom; }
 .growth-info { padding: 0px; }
 .growth-info .level-avatar, .growth-info .level-icon { display: inline-block; width: 15px; height: 15px; line-height: 15px; margin: 0px; padding: 0px; vertical-align: bottom; }
+#sidebar .side-single .inner-blk img, .cert__item { vertical-align: top; }
 .growth-info .sp-growth-icons { overflow: hidden; text-indent: -1000px; }
 .growth-info .level-icon-3 { background-position: 0px -170px; }
 .site-mast__user-nav .growth-info--nav { position: relative; overflow: visible; cursor: pointer; }
 .site-mast__user-nav .growth-info--nav .level-icon { position: relative; top: -1px; left: 0px; margin-left: 5px; }
+.footer-sprite, .site-info__item--service .site-info-service-content .hotline, .sp-ft--12315, .sp-ft--alipay, .sp-ft--knet, .sp-ft--record, .sp-ft--tenpay { background-image: url("_003.png"); background-repeat: no-repeat; }
 .site-info-w { padding-bottom: 30px; background: rgb(249, 249, 249) none repeat scroll 0% 0%; clear: both; }
+.site-outer { width: 100%; background: rgb(255, 255, 255) none repeat scroll 0% 0%; border-bottom: 1px solid rgb(221, 221, 221); }
+.site-info { border-top: 3px double rgb(238, 238, 238); margin: 0px auto; font-size: 12px; clear: both; width: 972px; }
+.site-info__item { float: left; padding-top: 20px; padding-bottom: 35px; width: 18.5%; min-height: 160px; }
+.site-info__item h3 { margin-bottom: 12px; font-size: 14px; font-weight: 700; color: rgb(102, 102, 102); padding-left: 10px; }
+.site-info__item ul { line-height: 1.8; color: rgb(102, 102, 102); padding-left: 10px; }
+.site-info__item li { list-style: outside none none; }
+.site-info__item a { color: rgb(153, 153, 153); font-size: 12px; }
+.site-info__item--service { width: 26%; font-family: "Hiragino Sans GB"," Microsoft YaHei","WenQuanYi Micro Hei",arial,sans-serif; color: rgb(102, 102, 102); }
+.site-info__item--service .site-info-service-content { padding-left: 12%; border-left: 1px solid rgb(238, 238, 238); }
+.site-info__item--service .site-info-service-content .hotline { display: block; background-position: 0px -80px; width: 49px; height: 45px; }
+.site-info__item--service .site-info-service-content .contact-name { font-size: 14px; color: rgb(102, 102, 102); margin-top: 5px; }
+.site-info__item--service .site-info-service-content .contact-info { margin-bottom: 27px; }
+.site-info__item--service .site-info-service-content .contact-info .contact-numbers { font-size: 18px; font-weight: 700; color: rgb(102, 102, 102); }
+.site-info__item--service .site-info-service-content .contact-info .contact-time { font-size: 12px; color: rgb(153, 153, 153); }
+.site-info__item--service .site-info-service-content .selfservice-link { color: rgb(43, 184, 170); }
+.copyright, .copyright a { color: rgb(153, 153, 153); }
+.copyright { padding-top: 28px; clear: both; text-align: center; font-size: 12px; font-family: initial; line-height: 12px; }
+.cert { margin: 30px auto; text-align: center; }
+.cert__item { display: inline-block; margin: 0px; height: 38px; }
+.cert__item a { display: block; outline: 0px none; height: 38px; margin: 0px; }
+.sp-ft { overflow: hidden; text-indent: -1000px; }
+.sp-ft--record { width: 111px; background-position: 0px -167px; }
+.sp-ft--knet { width: 107px; background-position: 0px -127px; }
+.sp-ft--12315 { width: 123px; background-position: 0px -40px; }
 .search-box { float: left; position: relative; margin: 21px 0px 0px 30px; }
 .search-box__tabs-container { position: relative; float: left; width: 63px; height: 38px; border-width: 2px medium 2px 2px; border-style: solid none solid solid; border-color: rgb(45, 184, 173) currentcolor rgb(45, 184, 173) rgb(45, 184, 173); -moz-border-top-colors: none; -moz-border-right-colors: none; -moz-border-bottom-colors: none; -moz-border-left-colors: none; border-image: none; }
 .search-box__tabs-container .tri { top: 17px; right: 8px; border-top: 3px solid rgb(102, 102, 102); z-index: 10; }
@@ -123,7 +157,7 @@ h1, h2, h3, h4, h5, h6 { font-family: "Hiragino Sans GB"," Microsoft YaHei","Wen
 .mt-cates, .mt-cates i { color: rgb(255, 255, 255); position: absolute; }
 .cate-nav, .mt-cates, .mt-cates i { position: absolute; }
 .cate-nav, .cate-nav__item, .nav-level2 { backface-visibility: hidden; }
-.base-sprite, .mt-cates { background-image: url("_003.png"); background-repeat: no-repeat; }
+.base-sprite, .mt-cates { background-image: url("_004.png"); background-repeat: no-repeat; }
 .mt-cates { top: 0px; border-bottom: medium none; padding-left: 15px; width: 231px; height: 40px; line-height: 38px; cursor: default; text-align: left; font-weight: 400; background-position: 0px -31px; }
 .mt-cates i { top: 10px; left: 206px; font-size: 18px; line-height: 1; }
 .mt-cates i.F-glob-caret-up, .nav-unfolded i.F-glob-caret-down { display: none; }
